--- a/templates/CenterControl/send_task.html
+++ b/templates/CenterControl/send_task.html
@@ -62,7 +62,7 @@
     function onSelect() {
 		console.log($("#id_task_type").val());
 		var task_type = $("#id_task_type").val();
-		if(task_type == 'realtime_task'){
+		if(task_type == '0'){
 			$("#id_contab").css('display','none');
 		}
 		else{
