--- a/templates/CenterControl/send_task.html
+++ b/templates/CenterControl/send_task.html
@@ -11,14 +11,14 @@
 		<div class="form-group">
 			<label class="control-label col-md-1">任务</label>
 			<div class="col-md-4">
-				<textarea class="form-control" cols="60" id="id_tasks" name="atom_task" rows="30" style="width:400px;height:200px;" placeholder="支持多条任务，用分号分隔"></textarea>
+				<textarea class="form-control" cols="60" id="id_tasks" name="atom_task" rows="30" style="width:400px;height:200px;" placeholder="支持多条任务，用换行分隔"></textarea>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class="control-label col-md-1">主机</label>
 			<div class="col-md-4">
-				<textarea class="form-control" cols="60" id="id_hosts" name="statement" rows="30" style="width:400px;height:200px;" placeholder="支持多台主机，用分号分隔"></textarea>
+				<textarea class="form-control" cols="60" id="id_hosts" name="statement" rows="30" style="width:400px;height:200px;" placeholder="支持多台主机，用换行分隔"></textarea>
 			</div>
 		</div>
 
