+add send file page.

--- a/templates/AnsibleAutomation/file_page.html
+++ b/templates/AnsibleAutomation/file_page.html
@@ -265,7 +265,7 @@
                     <div class="form-group">\
                         <label class="control-label col-md-2">文件</label>\
                         <div class="col-md-6">\
-                            <input class="form-control" name="load_file" type="file"\
+                            <input class="form-control" name="load_file" type="file">\
                         </div>\
                     </div>\
 			</form>\
