--- a/templates/CenterControl/center_control_common.html
+++ b/templates/CenterControl/center_control_common.html
@@ -4,10 +4,12 @@
 <div class="btn-toolbar">
 	<div class="btn-group">
 		{% url "framework_health_url" as the_framework_health_url %}
+		{% url "host_info_url" as the_host_info_url %}
 		{% url "send_task_url" as the_send_task_url %}
 		{% url "task_result"  as the_task_result_url %}
 		{% url "send_file_url" as the_send_file_url %}
 		<a class="btn btn-default {%if request.path = the_framework_health_url %} active {%endif%}" href={{ the_framework_health_url }}><span class="glyphicon glyphicon-list"></span>健康度数据</a>
+		<a class="btn btn-default {%if request.path = the_host_info_url %} active {%endif%}" href={{ the_host_info_url }}><span class="glyphicon glyphicon-list"></span>主机信息</a>
 		<a class="btn btn-default {%if request.path =  the_send_task_url or 'task_result' in request.path %} active {%endif%}" href={{ the_send_task_url }}><span class="glyphicon glyphicon-list"></span>下发任务</a>
 		<a class="btn btn-default {%if request.path =  the_send_file_url or 'send_result' in request.path %} active {%endif%}" href={{ the_send_file_url }}><span class="glyphicon glyphicon-list"></span>下发文件</a>
 	</div>
